# ai-notepad-automation

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: posts.py
automation/: keyboard.py  mouse.py  windows.py
config/: default.yaml  profile_high.yaml  profile_low.yaml  secrets.yaml.example
core/: config.py  env.py  exceptions.py  grounding_workflow.py  logger.py  pipeline.py  retry.py
docs/: DESIGN.md  INTERVIEW_PREP.md
models/: .gitkeep
scripts/: generate_annotated_screenshots.py  setup_desktop.py
tests/: test_bbox_parsing.py  test_config.py  test_coordinate_transform.py  test_env.py  test_gemini_grounding.py  test_genai_client.py  test_grounding_workflow.py  test_patch_scoring.py  test_screenseeker_mock.py
utils/: image.py
vision/: gemini_grounding.py  genai_client.py  grounding.py  gui_parser.py  patch_scoring.py  planner.py  screenseeker.py
